<resources>
    <string name="app_name">TodayWeather</string>
    <string name="app_title_1">오늘,</string>
    <string name="app_title_2">이옷어때</string>
    <string name="home_fragment">HOME</string>
    <string name="commend_fragment">COMMEND</string>
    <string name="style_fragment">STYLE</string>
    <string name="mypage_fragment">MYPAGE</string>
    <string name="celsius">℃</string>

    <!-- API URL -->
    <string name="base_url">https://api.openweathermap.org/</string>
    <string name="exclude_hourly">"{current,minutely,daily}"</string>
    <string name="exclude_current">"{hourly,minutely,daily}"</string>
    <string name="exclude_daily">"{current,minutely,hourly}"</string>
    <string name="units">metric</string>

    <!-- Init Activity -->
    <string name="init_title">선호하는 스타일을 선택해주세요</string>
    <string name="init_sub_title">나중에 마이페이지에서 수정할 수 있어요</string>
    <string name="init_menu">목록에서도 선택할 수 있어요</string>
    <string name="init_dialog_title">Style1로 하시겠어요?</string>
    <string name="init_dialog_contents">소개내용</string>
    <string name="init_dialog_negative">닫기</string>
    <string name="init_dialog_positive">선택하기</string>

    <!-- InitActivity Style List -->
    <string name="init_dialog_style1">캐주얼</string>
    <string name="init_dialog_style2">댄디</string>
    <string name="init_dialog_style3">레트로</string>
    <string name="init_dialog_style4">스트릿</string>
    <string name="init_dialog_style5">아메카지</string>
    <string name="init_dialog_style6">시크</string>

    <!-- HomeFragment -->
    <string name="home_location_title">현재위치</string>
    <string name="home_current_location">서울시 금천구 독산동</string>
    <string name="home_temp">8˚C</string>
    <string name="home_message">오늘은 깨끗하고 맑네요!</string>
    <string name="home_commend_title">이 옷 어때요?</string>
    <string name="home_content_title">오늘을 알려드려요</string>

    <string name="home_weather_message80x">하늘이 흐린 상태에요.</string>
    <string name="home_weather_message800">하늘이 깨끗하고 맑네요!</string>
    <string name="home_weather_message70x">안개와 먼지에 주의하세요!</string>
    <string name="home_weather_message60x">하얀 눈이 내리고 있어요.</string>
    <string name="home_weather_message30x">외출 시 우산을 꼭 챙기세요.</string>
    <string name="home_weather_message0">벼락에 주의하세요!</string>


    <!-- Firebase Storage URL -->
    <string name="storage_url">gs://todayweather-67667.appspot.com/</string>

    <!-- Weather Item -->
    <string name="item_weather_date">7/11</string>
    <string name="item_weather_min_temp">0도</string>
    <string name="item_weather_max_temp">10도</string>

    <!-- CommendFragment -->
    <string name="commend_title">오늘 날씨에 어울리는 옷을 추천해드려요</string>
    <string name="commend_lowest_temp">최저기온</string>
    <string name="commend_highest_temp">최고기온</string>
    <string name="commend_tomorrow">내일은 이런 옷이 좋을 것 같아요</string>
    <string name="commend_style_title">나와 비슷한 스타일의 사람은 이렇게 입었어요</string>

    <string name="commend_item_1">티셔츠</string>
    <string name="commend_item_2">청바지</string>
    <string name="commend_item_3">가디건</string>


    <!-- StyleFragment -->
    <string name="style_toolbar_title">오늘의 스타일</string>
    <string name="style_item_title">오늘처럼 맑은 날엔</string>
    <string name="style_item_author">서혜원</string>

    <!-- Style Item -->
    <string name="post_author">작성자</string>
    <string name="post_title">제목</string>
    <string name="style_item_filter1">전체</string>
    <string name="style_item_filter2">캐주얼</string>
    <string name="style_item_filter3">댄디</string>
    <string name="style_item_filter4">레트로</string>
    <string name="style_item_filter5">스트릿</string>

    <!-- SettingsFragment -->
    <string name="settings_toolbar_title">설정</string>
    <string name="settings_my_page">내 정보</string>
    <string name="settings_user_name">사용자 이름</string>
    <string name="settings_system_setting">시스템 설정</string>
    <string name="settings_setting_tts">날씨 음성 안내</string>
    <string name="settings_setting_push">오늘의 온도 푸시알림</string>
    <string name="settings_logout">로그아웃</string>

    <!-- Init spinner -->
    <string name="init_style1">모던</string>
    <string name="init_style2">댄디</string>
    <string name="init_style3">스포티</string>
    <string name="init_style4">시크</string>
    <string name="init_style5">레트로</string>
    <string-array name="artist_types">
        <item>@string/init_style1</item>
        <item>@string/init_style2</item>
        <item>@string/init_style3</item>
        <item>@string/init_style4</item>
        <item>@string/init_style5</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <!-- nav menu -->
    <string name="nav_home">홈</string>
    <string name="nav_commend">기온별 옷 추천</string>
    <string name="nav_style">오늘의 스타일</string>
    <string name="nav_mypage">마이페이지</string>
</resources>