<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dailyDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/item_weather_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dailyWeatherImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_weather_sunny" />

    <TextView
        android:id="@+id/dailyMinTempTextView"
        android:layout_width="@dimen/item_daily_temp_size"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/home_horizontal_margin"
        android:gravity="center"
        android:text="@string/item_weather_min_temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dailyMaxTempTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dailyMaxTempTextView"
        android:layout_width="@dimen/item_daily_temp_size"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/home_horizontal_margin"
        android:gravity="center"
        android:text="@string/item_weather_max_temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>