<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/init_background"
    tools:context=".ui.InitActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/init_title"
        android:textAppearance="@style/init_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_sub_title"
        android:textAppearance="@style/home_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_style1"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/init_style_casual"
        app:layout_constraintEnd_toStartOf="@id/iv_style2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize15Percent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_style2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/init_style_chic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_style1"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize15Percent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_style3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/init_style_sporty"
        app:layout_constraintEnd_toStartOf="@id/iv_style4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_style1"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize15Percent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_style4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/init_style_business"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_style3"
        app:layout_constraintTop_toBottomOf="@id/iv_style2"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize15Percent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/init_menu"
        android:textAppearance="@style/init_title"
        app:layout_constraintBottom_toTopOf="@id/spinner_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_style3" />

    <Spinner
        android:id="@+id/spinner_style"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_spinner_title" />
</androidx.constraintlayout.widget.ConstraintLayout>