<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commend_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/commend_background"
    tools:context=".view.commend.CommendFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <include
                android:id="@+id/ly_toolbar"
                layout="@layout/layout_toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_commend_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_horizontal_margin"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/commend_title"
                android:textAppearance="@style/commend_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_toolbar" />

            <com.google.android.material.card.MaterialCardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ly_commend"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="@dimen/home_horizontal_margin"
                android:layout_marginTop="@dimen/home_horizontal_margin"
                android:layout_marginEnd="@dimen/home_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_commend_title"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/comment_item1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_clothes_hoodie"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toStartOf="@id/comment_item2"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/comment_item2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_clothes_jean"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/comment_item3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_clothes_jacket"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@id/comment_item2"
                        card_view:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_commend_tomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_horizontal_margin"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/commend_tomorrow"
                android:textAppearance="@style/commend_tomorrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_commend" />

            <com.google.android.material.card.MaterialCardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ly_commend_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="@dimen/home_horizontal_margin"
                android:layout_marginTop="@dimen/home_horizontal_margin"
                android:layout_marginEnd="@dimen/home_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_commend_tomorrow"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="5dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_commend_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_horizontal_margin"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/commend_style_title"
                android:textAppearance="@style/commend_tomorrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_commend_tomorrow" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/home_horizontal_margin"
                android:layout_marginTop="@dimen/home_horizontal_margin"
                android:layout_marginEnd="@dimen/home_horizontal_margin"
                android:paddingBottom="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_commend_style" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>